    stdout/stderr and needs to remain so, but after unlinking it some NFS
    servers implement this by a temporary file in the same directory, which
    makes it impossible to rmdir that directory. Moving it instead works
    around the problem (thanks, Steven McCoy;
    https://launchpad.net/bugs/65003).
  * Fix formatting error in debootstrap(8) (.R is not a macro).

 -- Joey Hess <joeyh@debian.org>  Sat, 16 Jun 2007 13:09:59 -0400

debootstrap (0.3.3.3) unstable; urgency=low

  * NMU
  * Add support for lenny.

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 15:24:15 -0400

debootstrap (0.3.3.2) unstable; urgency=low

  * NMU with maintainer approval
  * Remove --force-auto-select option for 'sid' script as it is no longer
    supported by dpkg. Closes: #409527.

 -- Frans Pop <fjp@debian.org>  Fri, 16 Feb 2007 20:43:36 +0100

debootstrap (0.3.3.1) unstable; urgency=low

  * NMU with maintainer approval
  * functions/get_debs: build list of available packages from all specified
    sources; this allows debootstrap to also use e.g. custom versions of base
    packages from a source of local packages included on an installation CD.
    Closes: #398762.

 -- Frans Pop <fjp@debian.org>  Thu, 16 Nov 2006 05:30:43 +0100

debootstrap (0.3.3) unstable; urgency=low

  * Include kFreeBSD and fakechroot support from 0.3.2.1 and 0.3.2.2 NMUs,
    thanks to Otavio Salvador and Piotr Roszatycki. (Closes: Bug#319100,
    Bug#328446, Bug#204652, Bug#315044, Bug#Bug#319799)

  * Require target to be specified in all cases; document usage of target
    for --print-debs. (Closes: Bug#335922, Bug#337230)

  * Use ln -sf when symlinking awk for woody and sarge. (Closes: Bug#299048)

 -- Anthony Towns <aj@azure.humbug.org.au>  Sun,  6 Nov 2005 04:12:39 +1000

debootstrap (0.3.2.2) unstable; urgency=low

  * NMU
  * Added relicensed fakechroot variant. Closes: #204652.

 -- Piotr Roszatycki <dexter@debian.org>  Sat, 29 Oct 2005 11:29:00 +0200
